--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "tailwind-scrollbar": "^4.0.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
